@@ -1,5 +1,15 @@
 2005-05-10  Jan Beulich  <jbeulich@novell.com>
 
+	* macro.c (get_any_string): Remove the two last parameters. Replace
+	references to the former expand parameter by using macro_alternate.
+	Simplify loop condition for checking for end-of-string.
+	(get_string): Remove redunant call to sb_skip_white.
+	(do_formals): Remove two last arguments to get_any_string.
+	(macro_expand): Likewise.
+	(expand_irp): Likewise.
+
+2005-05-10  Jan Beulich  <jbeulich@novell.com>
+
 	* read.c (s_macro): Move local variable 'local' to smaller scope.
 	Call sb_kill on it when done.
 
